--- a/css/app.css
+++ b/css/app.css
@@ -246,6 +246,49 @@ h5.condensed-bold{
   bottom: 0px;
 }
 
+/* bar graph*/
+
+.horizontal .progress-bar {
+  float: left;
+  height: 45px;
+  width: 100%;
+  padding: 32px 0;
+}
+
+.horizontal .progress-track {
+  position: relative;
+  width: 100%;
+  height: 50px;
+  background: #ebebeb;
+}
+
+.horizontal .progress-fill {
+  position: relative;
+  background: #666;
+  height: 50px;
+  width: 50%;
+  color: #fff;
+  text-align: center;
+  font-family: "Helvetica Neue",sans-serif;
+  font-size: 1rem;
+  line-height: 50px;
+}
+.horizontal .progress-fill:after {
+	left: 100%;
+	top: 50%;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	pointer-events: none;
+	border-color: rgba(102, 102, 102, 0);
+	border-left-color: #666;
+	border-width: 25px;
+	margin-top: -25px;
+}
+/* /bar graph*/
+
 .f2{
   font-size: 1.25rem;
 }
@@ -267,6 +310,12 @@ h5.condensed-bold{
 }
 .mt6{
   margin-top: 6rem;
+}
+.pt4{
+  padding-top: 4rem;
+}
+.pt6{
+  padding-top: 6rem;
 }
 @media screen and (min-width: 40em) {
   .hero{
